[metadata]
name = pygow-poker
version = 0.0.1
description = Play or Simulate Pai Gow Poker
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pai, gow, poker
author = Jarrod Dowalter
url = https://github.com/jarroddowalter/pygow-poker
license = MIT License
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
    rich>=12.5.1

[options.packages.find]
where = src